# Naive-SAT-Solvers

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.sh
Naive-DPLL/: CMakeLists.txt
Naive-DPLL/include/: parser.h  solver.h
Naive-DPLL/src/: main.cpp  parser.cpp  solver.cpp
Naive-DPLL/test/: input.cnf
include/: cdclsolver.h  dpllsolver.h  parser.h  solver.h
src/: cdclsolver.cpp  dpllsolver.cpp  main.cpp  parser.cpp
